--- a/resources.qrc
+++ b/resources.qrc
@@ -29,6 +29,8 @@
         <file>img/gift.png</file>
         <file>img/speech2.png</file>
         <file>img/stop.png</file>
+        <file>img/zoom_in.png</file>
+        <file>img/zoom_out.png</file>
     </qresource>
     <qresource prefix="/res/pictures">
         <file>img/pic07.jpg</file>
